# docker-extract

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
src/: lib.rs
tests/: extract_image.rs  mod.rs
