[package]
name = "docker_extract"
version = "0.1.0"
authors = ["Karl Fischer <fishi0x01@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fishi0x01/docker-extract"
description = """
A library to extract the filesystem from a docker image
"""
keywords = ["docker", "extract", "filesystem", "decompress"]
categories = ["filesystem"]

[badges]
circle-ci = { repository = "fishi0x01/docker-extract" }
maintenance = { status = "actively-developed" }

[dependencies]
tar = "0.4.26"
serde_json = "1.0.48"
derive_builder = "0.9.0"
tempdir = "0.3.7"
